--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,6 @@
-site_name: Vulcan Book
-site_description: Complete documentation for Vulcan - SQLMesh wrapper with semantic layer and data validation
+site_name: DataOS Vulcan
+site_description: Complete documentation for Vulcan - complete stack for building data products
+site_author: DataOS Vulcan Team
 site_url: https://tmdc-io.github.io/vulcan-book
 
 # Repository
@@ -10,43 +11,61 @@ edit_uri: edit/main/docs/
 # Theme configuration
 theme:
   name: material
+  custom_dir: overrides
+  
+  # Logo and favicon
+  logo: assets/images/logo.png
+  favicon: assets/images/favicon.png
+  
   palette:
-    # Light mode
+    # Light mode - White & Grey
     - scheme: default
-      primary: indigo
-      accent: blue
+      primary: white
+      accent: grey
       toggle:
         icon: material/brightness-7
         name: Switch to dark mode
     
-    # Dark mode
+    # Dark mode - White & Grey
     - scheme: slate
-      primary: indigo
-      accent: blue
+      primary: white
+      accent: grey
       toggle:
         icon: material/brightness-4
         name: Switch to light mode
 
   # Typography
   font:
-    text: Oswald
-    code: Roboto Mono
+    text: Atkinson Hyperlegible
+    code: Source Code Pro
 
   # Features
   features:
-    - navigation.instant
-    - navigation.tracking
-    - navigation.sections
-    - navigation.expand
-    - navigation.path
-    - navigation.top
-    - navigation.footer
-    - toc.follow
-    - toc.integrate
-    - search.highlight
-    - search.suggest
-    - content.code.copy
-    - content.code.annotate
+    # Navigation
+    - navigation.instant        # Single-page app experience
+    - navigation.instant.prefetch  # Prefetch pages for faster loading
+    - navigation.tracking       # Update URL with current section
+    - navigation.tabs           # Top-level tabs in header
+    - navigation.tabs.sticky   # Sticky navigation tabs
+    - navigation.sections       # Group navigation sections
+    - navigation.expand         # Expand all sections by default
+    - navigation.path           # Show navigation path
+    - navigation.top            # Back to top button
+    - navigation.footer         # Previous/next navigation in footer
+    
+    # Table of Contents
+    - toc.follow               # Sidebar follows scroll
+    - toc.integrate            # Integrate TOC with navigation
+    
+    # Search
+    - search.highlight         # Highlight search terms
+    - search.suggest           # Search suggestions
+    - search.share             # Share search results
+    
+    # Content
+    - content.code.copy        # Copy code blocks
+    - content.code.annotate    # Code annotations
+    - content.tabs.link        # Link content tabs
 
 # Navigation structure
 nav:
@@ -65,12 +84,8 @@ nav:
     - Joins: semantic-layer/joins.md
     - Validation: semantic-layer/validation.md
   - Audits: audits/index.md
-  - Quality Checks: quality-checks/index.md
+  - Data Quality: data-quality/index.md
   - APIs: apis/index.md
-  - Deployment:
-    - Overview: deployment/index.md
-    - Isolated Environments Analysis: deployment/07-isolated-environments-ANALYSIS.md
-    - Isolated Environments Summary: deployment/07-isolated-environments-SUMMARY.md
 
 # Plugins
 plugins:
@@ -82,7 +97,7 @@ plugins:
       arguments:
         theme: base
         themeVariables:
-          primaryColor: '#6366f1'
+          primaryColor: '#9e9e9e'
           primaryTextColor: '#ffffff'
 
 # Markdown extensions
@@ -97,7 +112,7 @@ markdown_extensions:
   - toc:
       permalink: true
       title: On this page
-      toc_depth: 3
+      toc_depth: 2
 
   # Python Markdown Extensions
   - pymdownx.arithmatex:
@@ -106,6 +121,9 @@ markdown_extensions:
       smart_enable: all
   - pymdownx.caret
   - pymdownx.details
+  - pymdownx.emoji:
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
   - pymdownx.highlight:
       anchor_linenums: true
       line_spans: __span
@@ -129,17 +147,24 @@ markdown_extensions:
       custom_checkbox: true
   - pymdownx.tilde
   - pymdownx.blocks.admonition
+  - pymdownx.blocks.definition
   - pymdownx.blocks.details
+  - pymdownx.blocks.html
   - pymdownx.blocks.tab
+
+# Extra CSS and JavaScript
+extra_css:
+  - stylesheets/extra.css
 
 # Extra configuration
 extra:
+  # Social links
   social:
     - icon: fontawesome/brands/github
       link: https://github.com/tmdc-io/vulcan-book
-
-# Watch files for live reload during development
-watch:
-  - docs/
-  - mkdocs.yml
+  
+# Copyright
+copyright: |
+  Copyright &copy; 2024 DataOS Vulcan Team<br>
+  <small>Complete stack for building data products</small>
 
