--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,12 +29,9 @@ nav:
     - Components:
       - Model:
         - concepts/models/overview.md
-        - Core Properties:
-          - concepts/models/properties.md
-        - Advanced Properties:
-          - concepts/models/advanced_properties.md
-        - Statements:
-          - concepts/models/statements.md
+        - concepts/models/properties.md
+        # - Advanced Properties:
+        #   - concepts/models/advanced_properties.md
         - Model Types:
           - concepts/models/sql_models.md
           - concepts/models/python_models.md
@@ -42,6 +39,7 @@ nav:
           - concepts/models/managed_models.md
         - Model Kinds:
           - concepts/models/model_kinds.md
+        - concepts/models/statements.md
       - Test:
         - concepts/tests.md
       - Audit:
