--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,10 +8,11 @@ repo_url: https://github.com/tmdc-io/vulcan-book
 edit_uri: edit/main/docs/
 
 nav:
-  - "Docs": 
-    - About:
-      - index.md
-    - Configurations:
+  # The items previously under 'Docs' are now top-level:
+  # - About:
+  #     - index.md
+  - About: index.md
+  - Configurations:
       - configurations/overview.md
       - Options:
         - configurations/model_defaults.md
@@ -31,11 +32,9 @@ nav:
         # - integrations/engines/mssql.md
         # - integrations/engines/mysql.md
         # - integrations/engines/redshift.md
-  
-
       - CI/CD:
         - ci-cd/index.md
-    - Components:
+  - Components:
       - Model:
         - concepts/models/overview.md
         - concepts/models/properties.md
@@ -55,7 +54,7 @@ nav:
         - concepts/semantics/overview.md
         - concepts/semantics/models.md
         - concepts/semantics/metrics.md
-      - Advanced:
+      - Advance Features:
         - Macros:
           - concepts/macros/overview.md
           - concepts/macros/macro_variables.md
@@ -63,28 +62,27 @@ nav:
           - concepts/macros/jinja_macros.md
         - guides/signals.md
         - guides/custom_materializations.md
-    - Guides:
+  - Guides:
       - getting_started/docker.md
-        
+
       # - guides/configuration.md    --make sure every content we have included using this file
       - guides/plan.md
       - guides/run.md
       - guides/models.md
       - guides/incremental_time.md
-      - guides/data_quality.md        
+      - guides/data_quality.md
       - guides/model_selection.md
       - guides/transpiling.md
       #- guides/federated_engines.md
       # - Virtual environments Guide:
       # - Vulcan API Guide:
       # - Table Creation Guide:
+  - CLI Commands: reference/cli.md # Changed to "CLI Commands" for consistency with the visual and placed the file directly under it.
 
-    - reference/cli.md
-      
-
-  - "Cookbook":
+  # These items were already top-level and remain as is:
+  - Cookbook:
     - cookbook/index.md
-  - "FAQ":
+  - FAQ:
     - faq/index.md
  
 
@@ -120,10 +118,10 @@ theme:
     - navigation.instant.prefetch  # Prefetch pages for faster loading
     - navigation.instant.progress  # Show loading progress bar
     - navigation.tracking          # Update URL with current section
-    - navigation.tabs              # Top-level tabs in header
-    - navigation.tabs.sticky       # Sticky navigation tabs
-    # navigation.sections removed - sections are now collapsible toggles
-    # navigation.expand removed - keep sections collapsed by default
+    # - navigation.tabs            # Top-level tabs in header
+    # - navigation.tabs.sticky     # Sticky navigation tabs
+    # - navigation.sections          # removed - sections are now collapsible toggles
+    # - navigation.expand            # removed - keep sections collapsed by default
     - navigation.indexes           # Section index pages are clickable
     - navigation.path              # Show breadcrumb navigation path
     - navigation.top               # Back to top button
