updated engine images, added glossary terms

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -73,6 +73,7 @@ nav:
       # - Table Creation Guide:
   - CLI Commands: cli-command/cli.md
   - Cookbook: cookbook/index.md
+  - Glossary: glossary.md
   - FAQ: faq/index.md
  
 
